# direntcpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.adoc  direntcpp.cc
tests/: CMakeLists.txt  cxxc.hh  dummy.cc
